guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec: 
      containers:     
      - image: public.ecr.aws/p2a6g7m7/website:latest
        name: guestbook-ui
        resources:
          limits:
            cpu: "250m"
          requests:
            cpu: "250m"          
        ports:
        - containerPort: 8089
